--- a/ProductLanding.html
+++ b/ProductLanding.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Landing Page</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="ProductLanding.css">
 </head>
 <body>
   <!-- Header Section -->
@@ -12,6 +12,9 @@
     <nav id="nav-bar">
       <img id="header-img" src="https://play-lh.googleusercontent.com/G7jAks-PRl4d7IkL-s3Ir44nGyPq0Yh872N5UMwZYIJz4wG1Oj0DqoQjsAR5ddKZbQ" alt="Company Logo">
       <ul>
+        <li><a class="nav-link" href="#about">About</a></li>
+         <li><a class="nav-link" href="#how-it-works">How it Works</a></li> 
+        <li><a class="nav-link" href="#subscribe">Subscribe</a></li>
         <li><a href="#product" class="nav-link">Product</a></li>
         <li><a href="#features" class="nav-link">Features</a></li>
         <li><a href="#pricing" class="nav-link">Pricing</a></li>
@@ -40,7 +43,7 @@
     <!-- Video Section -->
     <section id="video-section">
       <h2>Watch Our Product in Action</h2>
-      <iframe id="video" width="560" height="315" src="ProductLanding.css" title="Product Video" frameborder="0" allowfullscreen></iframe>
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/TXSOitGoINE" title="Product Video" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <!-- Pricing Section -->
